# custom_d_fine

./: Makefile  README.md  config.yaml  config_.yaml  pixi.toml  pyproject.toml  requirements.txt
pretrained/: dfine_x_coco.pth
src/d_fine/: configs.py  dfine.py  dfine_criterion.py
src/d_fine/arch/: dfine_decoder.py
src/dl/: bench.py  check_errors.py  dataset.py  export.py  infer.py  ov_int8.py  postprocessor.py  train.py  train_entrypoint.py  utils.py  validator.py
src/etl/: preprocess.py  split.py
src/infer/: onnx_model.py  ov_model.py  torch_model.py  trt_alr.py  trt_model.py  yolo_model.py  yolo_trt_model.py
