[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "d-fine-seg"
version = "0.1.0"
description = "D-FINE segmentation training and inference utilities."
readme = "README.md"
requires-python = ">=3.12,<3.13"
license = { file = "LICENSE" }
authors = [
  { name = "Oliver Batchelor", email = "oliver.batchelor@canterbury.ac.nz" },
]

dependencies = [
  "albumentations>=2.0.8",
  "hydra-core>=1.3.2",
  "loguru>=0.7.2",
  "matplotlib>=3.10.3",
  "numpy>=2.1.1",
  "omegaconf>=2.3.0",
  "onnx>=1.17.0",
  "onnxconverter-common>=1.15.0",
  "onnxruntime>=1.21.1",
  "onnxsim>=0.4.36",
  "opencv-python-headless>=4.10.0.84",
  "pandas>=2.2.3",
  "Pillow>=11.1.0",
  "pillow-heif>=0.18.0",
  "PyYAML>=6.0.2",
  "scikit-learn>=1.7.0",
  "scipy>=1.15.1",
  "tensorrt>=10.10.0.31",
  "torchmetrics>=1.7.4",
  "faster-coco-eval>=1.6.5",
  "pycocotools>=2.0.8",
  "tqdm>=4.66.5",
  "difPy>=4.2.1",
  "gradio>=5.37",
  "wandb>=0.21.0",
  "tabulate>=0.9.0",
  "torch>=2.7.1",
  "torchvision>=0.22.0",
]

[project.optional-dependencies]
export = [
  "openvino>=2025.2.0",
]

[project.scripts]
"d-fine-train" = "src.dl.train:main"
"d-fine-infer" = "src.dl.infer:main"
"d-fine-export" = "src.dl.export:main"

[tool.hatch.build.targets.wheel]
packages = ["src"]
include = [
  "config*.yaml",
  "src/**/config*.yaml",
  "src/**/*.yaml",
]
exclude = [
  "assets/**",
  "pretrained/**",
  "**/*.png",
  "**/*.jpg",
  "**/*.jpeg",
  "**/*.gif",
]


