[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "d-fine-seg"
version = "0.1.0"
description = "D-FINE segmentation training and inference utilities."
readme = "README.md"
requires-python = ">=3.12,<3.13"
license = { file = "LICENSE" }
authors = [
  { name = "Argo Saakyan", email = "argo.cve@gmail.com" },
]

dependencies = [
  "albumentations>=2.0.8",
  "hydra-core>=1.3.2",
  "loguru>=0.7.2",
  "matplotlib>=3.10.3",
  "numpy>=2.1.1",
  "omegaconf>=2.3.0",
  "opencv-python-headless>=4.10.0.84",
  "pandas>=2.2.3",
  "Pillow>=11.1.0",
  "pillow-heif>=0.18.0",
  "scikit-learn>=1.7.0",
  "scipy>=1.15.1",
  "torchmetrics>=1.7.4",
  "faster-coco-eval>=1.6.5",
  "tqdm>=4.66.5",
  "difPy>=4.2.1",
  "gradio>=5.37",
  "wandb>=0.21.0",
  "tabulate>=0.9.0",
  "torch>=2.7.1",
  "torchvision>=0.22.0",
]

[project.optional-dependencies]
export = [
  "openvino>=2025.2.0",
  "onnx>=1.17.0",
  "onnxconverter-common>=1.15.0",
  "onnxruntime>=1.21.1",
  "onnxsim>=0.4.36",
  "tensorrt>=10.10.0.31",
]


[tool.hatch.build.targets.wheel]
packages = ["src"]
include = [
  "config*.yaml",
  "src/**/config*.yaml",
  "src/**/*.yaml",
]
exclude = [
  "assets/**",
  "pretrained/**",
  "**/*.png",
  "**/*.jpg",
  "**/*.jpeg",
  "**/*.gif",
]

[tool.pixi.workspace]
channels = ["conda-forge"]
platforms = ["linux-64"]

[tool.pixi.system-requirements]
cuda = "12.1"
libc = { family = "glibc", version = "2.34" }

[tool.pixi.pypi-dependencies]
d-fine-seg = { path = ".", editable = true }
build = "*"

[tool.pixi.dependencies]
python = "==3.12"
pytorch-gpu = ">=2.7.1,<3"
cuda = "12.9.*"

[tool.pixi.tasks]
split = "make split"
train = "make train"
export = "make export"
bench = "make bench"
infer = "make infer"
check_errors = "make check_errors"
test_batching = "make test_batching"
ov_int8 = "make ov_int8"

