[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "d-fine-seg"
version = "0.1.0"
description = "D-FINE segmentation training and inference utilities."
readme = "README.md"
requires-python = ">=3.12,<3.13"
license = { file = "LICENSE" }
authors = [
  { name = "Argo Saakyan", email = "argo.cve@gmail.com" },
]

dependencies = [
  "albumentations>=2.0.8",
  "hydra-core>=1.3.2",
  "loguru>=0.7.2",
  "matplotlib>=3.10.3",
  "numpy>=2.1.1",
  "omegaconf>=2.3.0",
  "opencv-python-headless>=4.10.0.84",
  "pandas>=2.2.3",
  "Pillow>=11.1.0",
  "pillow-heif>=0.18.0",
  "scikit-learn>=1.7.0",
  "scipy>=1.15.1",
  "torchmetrics>=1.7.4",
  "faster-coco-eval>=1.6.5",
  "tqdm>=4.66.5",
  "difPy>=4.2.1",
  "gradio>=5.37",
  "wandb>=0.21.0",
  "tabulate>=0.9.0",
  "torch>=2.7.1",
  "torchvision>=0.22.0",
]

[project.optional-dependencies]
export = [
  "openvino>=2025.2.0",
  "onnx>=1.17.0",
  "onnxconverter-common>=1.15.0",
  "onnxruntime>=1.21.1",
  "onnxsim>=0.4.36",
  "tensorrt>=10.10.0.31",
]

[project.scripts]
"d-fine-split" = "src.etl.split:main"
"d-fine-train" = "src.dl.train_entrypoint:main"
"d-fine-export" = "src.dl.export:main"
"d-fine-bench" = "src.dl.bench:main"
"d-fine-infer" = "src.dl.infer:main"
"d-fine-check-errors" = "src.dl.check_errors:main"
"d-fine-test-batching" = "src.dl.test_batching:main"
"d-fine-ov-int8" = "src.dl.ov_int8:main"

[tool.hatch.build.targets.wheel]
packages = ["src"]
include = [
  "config*.yaml",
  "src/**/config*.yaml",
  "src/**/*.yaml",
]
exclude = [
  "assets/**",
  "pretrained/**",
  "**/*.png",
  "**/*.jpg",
  "**/*.jpeg",
  "**/*.gif",
]

[tool.pixi.workspace]
channels = ["conda-forge"]
platforms = ["linux-64"]

[tool.pixi.system-requirements]
cuda = "12.1"
libc = { family = "glibc", version = "2.34" }

[tool.pixi.pypi-dependencies]
d-fine-seg = { path = ".", editable = true }
build = "*"

[tool.pixi.dependencies]
python = "==3.12"
pytorch-gpu = ">=2.7.1,<3"
cuda = "12.9.*"

[tool.pixi.tasks]
split = "d-fine-split"
train = "d-fine-train"
export = "d-fine-export"
bench = "d-fine-bench"
infer = "d-fine-infer"
check_errors = "d-fine-check-errors"
test_batching = "d-fine-test-batching"
ov_int8 = "d-fine-ov-int8"

